--- a/styles.css
+++ b/styles.css
@@ -206,3 +206,11 @@ article {
 .question {
   font-weight: bold;
 }
+
+td:first-of-type {
+  padding-right: 24px;
+}
+
+.dom-picture {
+  width: 300px;
+}
