--- a/styles.css
+++ b/styles.css
@@ -158,7 +158,7 @@ article {
 }
 
 .calc {
-  width: 48%;
+  width: 51%;
 }
 
 *,
@@ -183,6 +183,7 @@ article {
 
 .wall-of-gratitude-image {
   width: 200px;
+  height: 200px;
   border-radius: 50%;
 }
 
@@ -196,6 +197,7 @@ article {
   flex-direction: column;
   justify-content: center;
   align-items: center;
+  padding: 12px;
 }
 
 .faq-card:not(:first-of-type) {
