--- a/styles.css
+++ b/styles.css
@@ -199,6 +199,12 @@ article {
   justify-content: center;
   align-items: center;
   padding: 12px;
+  max-width: 350px;
+}
+
+.wall-of-gratitude-card p {
+  text-align: center;
+  line-height: 1.6;
 }
 
 .faq-card:not(:first-of-type) {
