--- a/styles.css
+++ b/styles.css
@@ -199,7 +199,7 @@ article {
   justify-content: center;
   align-items: center;
   padding: 12px;
-  max-width: 350px;
+  width: 320px;
 }
 
 .wall-of-gratitude-card p {
